--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,42 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# .gitignore
+
+# Node modules
+node_modules/
+
+# Build output
+.next/
+out/
+dist/
+
+# System files
+.DS_Store
+Thumbs.db
+
+# Env files (keep secrets out of git)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# VS Code settings
+.vscode/
+
+# Tailwind CSS JIT cache
+.tailwindcss/
+
+# Supabase generated types (if you use them)
+supabase/types/
+
+# Optional: OS-specific
+*.swp
